Various layout issues #4 (#323)

--- a/src/components/middle/footer/WebPagePreview.scss
+++ b/src/components/middle/footer/WebPagePreview.scss
@@ -27,28 +27,15 @@
   .WebPage {
     flex-grow: 1;
     margin: 0.1875rem 0 0.1875rem 0.125rem;
-    padding-left: .22rem;
 
-    .site-title {
-      margin-bottom: 0;
+    &::before {
+      top: .125rem;
+      bottom: .0625rem;
     }
 
-    &.without-photo::before {
-      content: attr(data-initial);
-      width: 2rem;
-      height: 2rem;
-      float: left;
-      margin-top: .075rem;
-      margin-right: 0.375rem;
-      background-color: var(--color-webpage-initial-background);
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: var(--border-radius-messages-small);
-      text-transform: uppercase;
-      font-weight: 500;
-      font-size: 1rem;
+    .site-title {
+      margin-top: .125rem;
+      margin-bottom: 0.1875rem;
     }
   }
 }
