--- a/src/components/middle/message/Message.scss
+++ b/src/components/middle/message/Message.scss
@@ -168,6 +168,15 @@
     }
   }
 
+  &.voice,
+  &.audio {
+    .sender-name,
+    .ReplyMessage {
+      margin-top: -.1875rem;
+      margin-bottom: .1875rem;
+    }
+  }
+
   &.voice {
     padding: .5rem !important;
 
@@ -179,6 +188,11 @@
   &.audio {
     min-width: 17.1875rem;
     padding: .5rem .5rem .8125rem !important;
+
+    .Audio + .text-content {
+      margin-top: .25rem;
+      margin-bottom: -0.4375rem;
+    }
   }
 }
 
